Successfully read and write on 2 socket, 1 for chat message and 1 for other purposes